# c2_project

./: .gitignore  Cargo.toml  Cross.toml  README.md  c2_simulator.db-journal
.cargo/: config.toml
agent/: Cargo.toml  build.rs
agent/src/: auth.rs  config.rs  crypto.rs  file_transfer.rs  heartbeat.rs  main.rs  reconnect.rs  system_info.rs
dashboard/: README.md  app.js  index.html  style.css
dashboard-react/: index.html  package-lock.json  package.json  vite.config.js
dashboard-react/src/: App.jsx  index.css
dashboard-react/src/api/: c2Api.js
dashboard-react/src/components/: AgentBuildModal.jsx  AgentDetail.jsx  BroadcastModal.jsx  FileTransfer.jsx  Login.jsx  MetricsChart.jsx  Overview.jsx  Sidebar.jsx  StatusIndicator.jsx  Terminal.jsx  UploadBox.jsx
dashboard-react/src/components/SessionDashboard/: AgentCliPanel.jsx  AgentSelector.jsx  PayloadUploadZone.jsx  SessionDashboard.jsx  UploadSessionList.jsx  index.jsx  session-dashboard.css
dashboard-react/src/hooks/: useSocket.js
docker/: README.md
docs/: sequence-diagram.txt
scripts/: queue-command.sh  run-agent.sh  run-server.sh  setup-cross.sh
server/: Cargo.toml  c2_simulator.db
server/certs/: cert.pem  key.pem
server/src/: auth.rs  build_service.rs  build_service.rs.save  crypto.rs  db.rs  file_service.rs  index.ts  logger.rs  main.rs  registry.rs  sessions.rs  tls_util.rs  websocket.rs
server/src/auth/: challenge.ts
server/src/db/: schema.sql
server/src/logger/: logger.ts
server/src/registry/: agentRegistry.ts
server/src/sessions/: sessionManager.ts
server/src/websocket/: gateway.ts
