[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
rcgen = "0.13"
time = "0.3"
